--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "15 puzzle game in console",
   "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node-dev index.ts",
+    "start": "ts-node-dev -r tsconfig-paths/register index.ts",
     "build": "tsc",
     "start:dist": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +20,13 @@
   },
   "homepage": "https://github.com/V1c70r/15-puzzle#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.25",
     "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
