--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register index.ts",
-    "build": "tsc",
     "start:dist": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "format:fix": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "lint": "echo TODO",
+    "test": "echo TODO",
+    "check:strict": "npm test && npm run format:check && npm run build"
   },
   "repository": {
     "type": "git",
@@ -22,11 +26,24 @@
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.25",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "lodash": "^4.17.20"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write"
+    ]
   }
 }
