--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "ts-node-dev -r tsconfig-paths/register index.ts",
     "start:dist": "node dist/index.js",
     "build": "tsc",
-    "format:fix": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\"",
-    "lint": "echo TODO",
+    "format:check": "prettier --check 'src/**/*.ts'",
+    "format:fix": "prettier --write 'src/**/*.ts'",
+    "lint:check": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint --fix 'src/**/*.ts'",
     "test": "echo TODO",
-    "check:strict": "npm test && npm run format:check && npm run build"
+    "check:strict": "npm test && npm run lint:check && npm run format:check && npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,14 @@
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.25",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
@@ -43,7 +51,8 @@
   },
   "lint-staged": {
     "src/**/*.ts": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   }
 }
