--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "format:fix": "prettier --write 'src/**/*.ts'",
     "lint:check": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint --fix 'src/**/*.ts'",
-    "test": "echo TODO",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "coverage": "jest --coverage",
+    "check": "npm test && npm run lint:fix && npm run format:fix && npm run build",
     "check:strict": "npm test && npm run lint:check && npm run format:check && npm run build"
   },
   "repository": {
@@ -25,6 +28,7 @@
   },
   "homepage": "https://github.com/V1c70r/15-puzzle#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.25",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -53,6 +57,9 @@
     "src/**/*.ts": [
       "prettier --write",
       "eslint --fix"
+    ],
+    "src/**/*.spec.ts": [
+      "jest"
     ]
   }
 }
