--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "lint:fix": "eslint --fix 'src/**/*.ts'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "coverage": "jest --coverage",
-    "check": "npm test && npm run lint:fix && npm run format:fix && npm run build",
+    "test:coverage": "jest --coverage",
+    "check": "npm run test:coverage && npm run lint:fix && npm run format:fix && npm run build",
     "check:strict": "npm test && npm run lint:check && npm run format:check && npm run build"
   },
   "repository": {
