--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,28 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "index.ts",
+      "name": "debug",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/index.ts",
+      "runtimeArgs": ["-r", "ts-node/register", "-r", "tsconfig-paths/register"],
+      "console": "integratedTerminal",
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "attach",
+      "port": 9229
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "debug tests",
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/index.ts",
-      "runtimeArgs": ["-r", "ts-node/register", "-r", "tsconfig-paths/register"],
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ],
+      "program": "${workspaceRoot}/node_modules/.bin/jest",
+      "runtimeArgs": ["--inspect-brk"],
+      "args": ["--runInBand"],
       "console": "integratedTerminal",
     }
   ]
