--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register index.ts",
-    "start:dist": "node dist/index.js",
-    "build": "tsc",
+    "start:dist": "TS_NODE_PROJECT=tsconfig.dist.json node -r tsconfig-paths/register dist/index.js",
+    "build": "rm -rf ./dist && tsc && mkdir -p ./dist/data",
     "format:check": "prettier --check 'src/**/*.ts'",
     "format:fix": "prettier --write 'src/**/*.ts'",
     "lint:check": "eslint 'src/**/*.ts'",
