feat: add svelte UI

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "15 puzzle game in console",
   "main": "dist/index.js",
   "scripts": {
+    "setup": "npm ci && npm --prefix src/infra/svelte ci",
     "start": "ts-node-dev -r tsconfig-paths/register index.ts",
+    "start:svelte": "npm --prefix src/infra/svelte run dev",
     "start:dist": "TS_NODE_PROJECT=tsconfig.dist.json node -r tsconfig-paths/register dist/index.js",
     "build": "rm -rf ./dist && tsc && mkdir -p ./dist/data",
     "format:check": "prettier --check 'src/**/*.ts'",
     "format:fix": "prettier --write 'src/**/*.ts'",
-    "lint:check": "eslint 'src/**/*.ts'",
-    "lint:fix": "eslint --fix 'src/**/*.ts'",
+    "lint:check": "eslint 'src/**/*.ts' && npm run --prefix src/infra/svelte validate",
+    "lint:fix": "eslint --fix 'src/**/*.ts' && npm run --prefix src/infra/svelte validate",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
